# mud

./: .clang-format  .gitignore  .luarc.json  ASAN_Suppress.txt  CMakeLists.txt  COMPILING.md  LICENSES-THIRD-PARTY  README  astylerc  deb-experimental.sources  vcpkg-configuration.json  vcpkg.json  vcpkg_install.bat
Xbox/: README.Xbox  odamex.sln  odamex.vcproj
client/: CMakeLists.txt  cl_download.cpp
cmake/: EDGEClassic.cmake
common/: cmdlib.cpp  d_main.cpp  doomdef.h  doomtype.h  i_crash_noop.cpp  i_crash_posix.cpp  i_crash_win32.cpp  i_net.cpp  m_fileio.cpp  m_fileio_posix.cpp  m_fileio_win32.cpp  m_resfile.cpp  strptime.cpp  version.h  w_ident.cpp  win32inc.h
config-samples/: coop-doom.cfg  coop-masterlevels.cfg  coop-modern.cfg  coop-zdoom.cfg  ctf-doom.cfg  ctf-pub.cfg  dm-doom.cfg  dm-modern.cfg  dm-zdoom.cfg  duel-altdeath.cfg  duel-doom.cfg  duel-zddl.cfg  duel-zdoom.cfg  horde-doom.cfg  horde-modern.cfg  horde-zdoom.cfg  tdm-doom.cfg  tdm-modern.cfg  tdm-zdoom.cfg
libraries/: CMakeLists.txt
libraries/cglm/: CMakeLists.txt
libraries/dr_libs/: dr_libs.cc
libraries/dr_wav/: CMakeLists.txt  dr_wav.cc
libraries/flecs/: CMakeLists.txt
libraries/fluidlite/: CMakeLists.txt
libraries/gl4es/src/gl/: init.c
libraries/libstem_gamepad/: CMakeLists.txt
libraries/libstem_gamepad/source/gamepad/: Gamepad.h  Gamepad_db.c  Gamepad_linux.c  Gamepad_macosx.c  Gamepad_private.c  Gamepad_private.h  Gamepad_windows_dinput.c
libraries/physfs/: CMakeLists.txt
libraries/portmidi/pm_mac/: pmmac.c  readbinaryplist.c
libraries/sdl3/: sdl3-config.cmake
libraries/sdl3/include/SDL3/: SDL_revision.h
libraries/sokol/: CMakeLists.txt  sokol.cc  sokol_app.h
libraries/stb/: stb.cc
libraries/tracy/: CMakeLists.txt
odalaunch/: CMakeLists.txt
odalpapi/: net_error.cpp  net_io.cpp  net_io.h  (+2 more)
odaproto/: CMakeLists.txt  server.pb.cc  server.pb.h
source/engine/client/: CMakeLists.txt  am_map.cpp  c_bind.cpp  c_bind.h  c_console.cpp  c_effect.cpp  c_effect.h  cl_ctf.cpp  cl_cvarlist.cpp  cl_demo.cpp  cl_demo.h  cl_download.cpp  cl_download.h  cl_game.cpp  cl_level.cpp  cl_main.cpp  cl_main.h  cl_maplist.cpp  cl_maplist.h  cl_mobj.cpp  cl_netgraph.cpp  cl_netgraph.h  cl_parse.cpp  cl_parse.h  cl_pch.h  cl_pred.cpp  cl_replay.cpp  cl_replay.h  cl_responderkeys.cpp  cl_responderkeys.h  cl_stubs.cpp  cl_vote.cpp  cl_vote.h  d_main.cpp  d_net.cpp  d_netinfo.cpp  f_finale.cpp  f_finale.h  f_wipe.cpp  f_wipe.h  (+53 more)
source/engine/client/app/: cl_application.cpp  cl_engine.cpp
source/engine/client/script/: lua_client_public.h
source/engine/client/script/private/: lua_client_game.cpp  lua_client_main.cpp  lua_client_options.cpp  lua_client_private.h  lua_client_ui.cpp  lua_client_ui_react_plugin.cpp  lua_client_ui_react_plugin.h  lua_client_video.cpp
source/engine/client/sdl/: SDLMain.m  client.rc.in  i_icon.h  i_input.cpp  i_input.h  i_input_sdl12.cpp  i_input_sdl12.h  i_input_sdl20.cpp  i_input_sdl20.h  i_main.cpp  i_midi.cpp  i_midi.h  i_music.cpp  i_music.h  i_musicsystem.cpp  i_musicsystem.h  i_musicsystem_au.cpp  i_musicsystem_au.h  i_musicsystem_fluidlite.cpp  i_musicsystem_fluidlite.h  i_musicsystem_portmidi.cpp  i_musicsystem_portmidi.h  i_musicsystem_sdl.cpp  i_musicsystem_sdl.h  i_sdl.h  i_sound.cpp  i_sound.h  i_system.cpp  i_system.h  i_video.cpp  i_video.h  i_video_sdl12.cpp  i_video_sdl12.h  i_video_sdl20.cpp  i_video_sdl20.h  mus2midi.cpp  mus2midi.h  mus2midi.hpp  resource.h
source/engine/client/ui/: ui_public.h
source/engine/client/ui/private/: ui_console.cpp  ui_console.h  ui_context_play.cpp  ui_context_play.h  ui_file.cpp  ui_file.h  ui_imgui.cpp  ui_input.cpp  ui_input.h  ui_main.cpp  ui_main.h  ui_mud_plugin.cpp  ui_mud_plugin.h  ui_playerview.cpp  ui_playerview.h  ui_render.cpp  ui_render.h  ui_system.cpp  ui_system.h
source/engine/common/: CMakeLists.txt  actor.h  am_map.h  c_console.h  c_cvarlist.cpp  c_cvars.cpp  c_cvars.h  c_dispatch.cpp  c_dispatch.h  c_doc.cpp  c_effect.cpp  c_effect.h  c_maplist.h  c_pch.h  c_vote.cpp  c_vote.h  cmdlib.cpp  cmdlib.h  com_misc.cpp  com_misc.h  crc32.cpp  crc32.h  d_dehacked.cpp  d_dehacked.h  d_event.h  d_items.cpp  d_items.h  d_main.cpp  d_main.h  d_net.h  d_netcmd.cpp  d_netcmd.h  d_netinf.h  d_player.h  d_ticcmd.h  dobject.cpp  dobject.h  doomdata.h  doomdef.h  doomkeys.h  (+204 more)
source/engine/common/script/: lua_public.h
source/engine/common/script/private/: lua_common_main.cpp  lua_debugger.cpp  lua_debugger.h  lua_vm.cpp
source/engine/mudproto/: CMakeLists.txt  common.pb.cc  common.pb.h  common.proto  server.proto
source/engine/server/: CMakeLists.txt  am_map.cpp  c_console.cpp  d_main.cpp  d_netinfo.cpp  i_main.cpp  i_system.cpp  i_system.h  m_misc.cpp  r_main.cpp  r_plane.cpp  r_sky.cpp  s_sound.cpp  sv_banlist.cpp  sv_banlist.h  sv_ctf.cpp  sv_cvarlist.cpp  sv_game.cpp  sv_level.cpp  sv_main.cpp  sv_main.h  sv_maplist.cpp  sv_maplist.h  sv_master.cpp  sv_master.h  sv_mobj.cpp  sv_pch.h  sv_pickup.cpp  sv_pickup.h  sv_rproto.cpp  sv_sqp.cpp  sv_sqp.h  sv_sqpold.cpp  sv_sqpold.h  sv_stats.cpp  sv_stats.h  sv_stubs.cpp  sv_vote.cpp  sv_vote.h  v_palette.cpp
source/libraries/imgui/: CMakeLists.txt  cimgui.cpp
source/libraries/rmlui/: CMakeLists.txt
source/libraries/rmlui/Source/Lua/: LuaEventListener.cpp
source_files/edge/: CMakeLists.txt  am_map.cc  am_map.h  bot_nav.cc  bot_think.cc  con_con.cc  con_gui.h  con_main.cc  con_main.h  con_var.cc  con_var.h  defaults.h  dm_defs.h  dm_state.h  dstrings.h  e_event.h  e_input.cc  e_input.h  e_main.cc  e_main.h  e_player.cc  e_player.h  e_ticcmd.h  f_finale.cc  f_interm.cc  g_game.cc  g_game.h  hu_draw.cc  hu_draw.h  hu_font.cc  hu_stuff.cc  i_ctrl.cc  i_defs_gl.h  i_gamepad_db.h  i_main.cc  i_midi.h  i_movie.cc  i_sound.cc  i_sound.h  i_system.cc  (+122 more)
source_files/edge/script/compat/: lua_compat.cc  lua_compat.h  lua_core.cc  lua_game.cc  lua_hud.cc  lua_player.cc
source_files/epi/: CMakeLists.txt  epi.h  epi_bam.h  epi_color.cc  epi_doomdefs.h  epi_filesystem.cc  epi_filesystem.h  epi_known_enames.h  epi_sdl.h  epi_str_util.cc  epi_str_util.h
(+144 files in other folders)
