add_subdirectory(almostequals)
add_subdirectory(cglm)
add_subdirectory(dr_wav)
add_subdirectory(fluidlite)
add_subdirectory(glad)
add_subdirectory(physfs)
add_subdirectory(pl_mpeg)
add_subdirectory(sokol)
add_subdirectory(stb)
add_subdirectory(tracy)
add_subdirectory(xxHash)
add_subdirectory(flecs)
add_subdirectory(libstem_gamepad)
