add_subdirectory(almostequals)
add_subdirectory(dr_libs)
add_subdirectory(fluidlite)
if (NOT EDGE_GL_ES2)
  add_subdirectory(glad)
else()
  add_subdirectory(gl4es)
endif()
add_subdirectory(hmm)
add_subdirectory(lua)
add_subdirectory(minivorbis)
add_subdirectory(miniz)
add_subdirectory(pl_mpeg)
add_subdirectory(sokol)
add_subdirectory(stb)
add_subdirectory(superfasthash)
add_subdirectory(tracy)